--- a/8.md
+++ b/8.md
@@ -1,8 +1,8 @@
 8
 
-**discard whitespace**
-**+/- sign**
-**result(string->int)**
-**belong (INT_MIN, INT_MAX)**
+**discard whitespace
++/- sign
+result(string->int)
+belong (INT_MIN, INT_MAX)**
 
 **regularization**
